[gd_scene load_steps=3 format=3 uid="uid://b3o5x2qfahd2f"]

[ext_resource type="Script" path="res://addons/DialogHelperTool/Tool/TimelineItem/ScriptModal/ScriptModal.gd" id="1_jiy2c"]
[ext_resource type="PackedScene" uid="uid://baplo5xewiulv" path="res://addons/DialogHelperTool/Shared/Modal/Modal.tscn" id="2_127qt"]

[node name="ScriptModal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_jiy2c")
popup_size = Vector2(1, 1)

[node name="Modal" parent="." node_paths=PackedStringArray("child") instance=ExtResource("2_127qt")]
layout_mode = 1
child = NodePath("Panel/MarginContainer/PanelContainer/Editor")
popup_time = 0.25
full_blur = 2.0

[connection signal="back_clicked" from="Modal" to="." method="close_window_no_data"]
[connection signal="canceled" from="Modal" to="." method="close_window"]
[connection signal="success" from="Modal" to="." method="close_window"]
[connection signal="was_hidden" from="Modal" to="." method="_on_modal_was_hidden"]
